@@ -224,7 +224,7 @@ select_border_cmd_callback (GtkAction *action,
 {
   GimpDisplay *display;
   GtkWidget   *dialog;
-  GtkWidget   *feather_border;
+  GtkWidget   *button;
   return_if_no_display (display, data);
 
   dialog = gimp_query_size_box (_("Border Selection"),
@@ -240,15 +240,16 @@ select_border_cmd_callback (GtkAction *action,
                                 G_OBJECT (display->image), "disconnect",
                                 select_border_callback, display->image);
 
-  feather_border = gtk_check_button_new_with_mnemonic (_("_Feather border"));
+  button = gtk_check_button_new_with_mnemonic (_("_Feather border"));
 
-  gtk_box_pack_start (GTK_BOX (GIMP_QUERY_BOX_VBOX (dialog)), feather_border,
+  gtk_box_pack_start (GTK_BOX (GIMP_QUERY_BOX_VBOX (dialog)), button,
                       FALSE, FALSE, 0);
 
-  g_object_set_data (G_OBJECT (dialog), "border_feather_toggle", feather_border);
-  gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (feather_border),
+  g_object_set_data (G_OBJECT (dialog), "border-feather-toggle", button);
+
+  gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (button),
                                 select_border_feather);
-  gtk_widget_show (feather_border);
+  gtk_widget_show (button);
 
   gtk_widget_show (dialog);
 }
@@ -345,9 +346,7 @@ select_feather_callback (GtkWidget *widget,
   gdouble    radius_x;
   gdouble    radius_y;
 
-  select_feather_radius = size;
-
-  radius_x = radius_y = select_feather_radius;
+  radius_x = radius_y = select_feather_radius = size;
 
   if (unit != GIMP_UNIT_PIXEL)
     {
@@ -372,17 +371,16 @@ select_border_callback (GtkWidget *widget,
                         GimpUnit   unit,
                         gpointer   data)
 {
-  GimpImage *image = GIMP_IMAGE (data);
+  GimpImage *image  = GIMP_IMAGE (data);
+  GtkWidget *button = g_object_get_data (G_OBJECT (widget),
+					 "border-feather-toggle");
   gdouble    radius_x;
   gdouble    radius_y;
 
-  select_border_radius = ROUND (size);
-
-  radius_x = radius_y = select_border_radius;
+  radius_x = radius_y = select_border_radius = ROUND (size);
 
   select_border_feather =
-    GTK_TOGGLE_BUTTON (g_object_get_data (G_OBJECT (widget),
-                                          "border_feather_toggle"))->active;
+    gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (button));
 
   if (unit != GIMP_UNIT_PIXEL)
     {
@@ -412,9 +410,7 @@ select_grow_callback (GtkWidget *widget,
   gdouble    radius_x;
   gdouble    radius_y;
 
-  select_grow_pixels = ROUND (size);
-
-  radius_x = radius_y = select_grow_pixels;
+  radius_x = radius_y = select_grow_pixels = ROUND (size);
 
   if (unit != GIMP_UNIT_PIXEL)
     {
@@ -443,9 +439,7 @@ select_shrink_callback (GtkWidget *widget,
   gint       radius_x;
   gint       radius_y;
 
-  select_shrink_pixels = ROUND (size);
-
-  radius_x = radius_y = select_shrink_pixels;
+  radius_x = radius_y = select_shrink_pixels = ROUND (size);
 
   select_shrink_edge_lock =
     ! GTK_TOGGLE_BUTTON (g_object_get_data (G_OBJECT (widget),
