@@ -1,3 +1,11 @@
+2006-06-05  Sven Neumann  <sven@gimp.org>
+
+	* app/paint-funcs/paint-funcs.[ch]
+	* app/core/gimpchannel.[ch]
+	* app/core/gimpselection.c:
+	* app/actions/select-commands.c: further cleaned up the patch from
+	bug #88633.
+
 2006-06-05  Karine Delvare  <edhel@gimp.org>
 
 	* app/tools/tools-enums.[ch]: added GimpRectangleGuide enum.
